kubernetes/mini/core/database/dragonfly/operator/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-operator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly-operator

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: dragonfly
      toPorts:
        - ports:
            - port: "9999"
              protocol: TCP
    - toEndpoints: # sonarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
